<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blbl</string>
    <string name="tab_recommend">推荐</string>
    <string name="tab_popular">热门</string>
    <string name="tab_search">搜索</string>
    <string name="tab_category">分类</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_settings">设置</string>
    <string name="sidebar_login">登录</string>
    <string name="search_clear">清空</string>
    <string name="search_backspace">后退</string>
    <string name="search_t9">T9键盘</string>
    <string name="search_full_keyboard">全键盘</string>
    <string name="search_action">搜索</string>
    <string name="search_clear_history">清空搜索记录</string>
    <string name="search_tab_video">视频</string>
    <string name="search_tab_media">影视</string>
    <string name="search_tab_live">直播</string>
    <string name="search_tab_user">用户</string>
    <string name="search_sort_title">视频排序</string>
    <string name="search_sort_totalrank">综合排序</string>
    <string name="search_sort_click">最多点击</string>
    <string name="search_sort_pubdate">最新发布</string>
    <string name="search_sort_dm">最多弹幕</string>
    <string name="search_sort_stow">最多收藏</string>
    <string name="search_sort_scores">最多评论</string>
    <string name="search_unsupported">该分类暂未实现</string>
    <string name="label_following">关注</string>
    <string name="label_follower">粉丝</string>
    <string name="label_coins">银币</string>
    <string name="label_uid_fmt">UID %1$s</string>
    <string name="label_level_fmt">等级 Lv%1$d</string>
    <string name="label_exp_fmt">经验 %1$s</string>
</resources>
